<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome" >
    
    <TextView
        android:id="@+id/coco2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/coco2" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/coco2"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#ff6100"
        android:text="@string/welcome_text" />
    
    <TextView 
        android:id="@+id/count_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:text="@string/count_down_text"/>
    
    <Button
        android:id="@+id/enter"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coco2"
        android:layout_centerHorizontal="true"
        android:textColor="#ff6100"
        android:text="@string/enter_button" />

</RelativeLayout>